Finishing implementation of website

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
   <nav class="navbar bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img id="logo-image" src="logo.png" alt="Logo" class="img-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img id="logo-image" src="../Assets/logo.png" alt="Logo" class="img-fluid">
         </a>
         <ul class="navbar-nav flex-row ms-auto">
             <li class="nav-item me-5">
